# QT6-demo-app

./: CMakeLists.txt
include/: chart.hpp  gyro_chart.hpp  list_item.hpp  mainwindow.hpp  player.hpp  webview.hpp
resources/: resources.qrc
src/: chart.cpp  gyro_chart.cpp  list_item.cpp  main.cpp  mainwindow.cpp  player.cpp  webview.cpp
ui/: list_item.ui  mainwindow.ui
